--- a/CosasPollo/index.html
+++ b/CosasPollo/index.html
@@ -27,7 +27,7 @@
     <div class="container-fluid">
 
       <a class="navbar-brand" href="#">
-        <span class="text-primary fs-5 fw-bold">ExtertD.</span>
+        <span class="text-primary fs-5 fw-bold">GroundZero</span>
       
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -84,7 +84,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="imagenes/adrianna-geo-1rBg5YSi00c-unsplash.jpg" class="d-block w-100" alt="...">
+        <img src="imagenes/adrianna-geo-1rBg5YSi00c-unsplash.jpg" class="d-block w-100" alt="..." width="">
       </div>
       <div class="carousel-item">
         <img src="imagenes/europeana-6c43FgRt0Dw-unsplash.jpg" class="d-block w-100" alt="...">
@@ -105,30 +105,56 @@
 
 
 
+
+
 <section class="w-50 mx-auto text-center pt-5">
   <h1 class="p-3 fs-2 border-top border-3"> tienda de arte</h1>
   <p class="p-3 fa-4"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat ratione nostrum assumenda molestiae, tempore officia perferendis sit ab porro cupiditate necessitatibus debitis officiis! Provident exercitationem, eaque hic porro consequuntur ex.</p>
 
+</section>
 
-  <section class="container-fluid"> 
 
-    <div class="row">
-      <div class="col">
+
+
+
+  <section class="container-fluid" id="contenedorimagenesestaticas1">
+    <div class="row w-75 mx-auto">
+      <div class="col-lg-3 col-md-6 col-sm-12">
         <img src="imagenes/escultura.jpeg" alt="escultura" width="180" height="160">
         <div>
-          <h3> desarrollo</h3>
-          <p> Lorem ipsum dolor sit amet consectetur</p>
-
+          <h3>Esculturas</h3>
+          <p>Lorem ipsum dolor sit amet consectetur</p>
         </div>
-
       </div>
-    
-
-
-
+  
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="imagenes/image2.jpg" alt="pintura" width="180" height="160">
+        <div>
+          <h3>Pinturas</h3>
+          <p>Lorem ipsum dolor sit amet consectetur</p>
+        </div>
+      </div>
+  
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="imagenes/kenza-benaouda-M32i7g6FvFg-unsplash.jpg" alt="tejidos" width="180" height="160">
+        <div>
+          <h3>Tejidos</h3>
+          <p>Lorem ipsum dolor sit amet consectetur</p>
+        </div>
+      </div>
+  
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="imagenes/fbria.jpg" alt="orfebrería" width="180" height="160">
+        <div>
+          <h3>Orfebrería</h3>
+          <p>Lorem ipsum dolor sit amet consectetur</p>
+        </div>
+      </div>
     </div>
-
   </section>
+
+
+  
   
 
 
