--- a/CosasPollo/index.html
+++ b/CosasPollo/index.html
@@ -19,8 +19,10 @@
 
 <body>
 
+
+  <!--navbar-->
   <header class="container-fluid bg-primary d-flex " >
-    <p> ---</p>
+    <p> GroundZero@protonmail.com </p>
   </header>
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary p-3" id="menu1">
@@ -40,30 +42,28 @@
             <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Artistas</a>
+            <a class="nav-link" href="Artistas.html">Artistas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Obras</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sobre nosotros</a>
+            <a class="nav-link" href="Nosotros.html">Sobre nosotros</a>
           </li>
 
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              Obras
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="Galeria.html">Escultura</a></li>
+              <li><a class="dropdown-item" href="Galeria.html">Tejidos</a></li>
+              <li><a class="dropdown-item" href="Galeria.html">Orfebrería</a></li>
+              <li><a class="dropdown-item" href="Galeria.html">Pinturas</a></li>
+              <li><a class="dropdown-item" href="Galeria.html">Otros</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
+            <a class="nav-link" href="Nosotros.html">Iniciar sesion</a>
+          </li>   
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="text" placeholder="Nosequesepuedebuscarxd" aria-label="Search">
@@ -75,6 +75,7 @@
 
 
   <!--slider/carrusel-->
+  <!--ajustar imagenes al contendedor???-->
 
   <div id="carouselExampleIndicators" class="carousel slide">
     <div class="carousel-indicators">
@@ -93,22 +94,24 @@
         <img src="imagenes/henrik-donnestad-t2Sai-AqIpI-unsplash.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
+    
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
-    </button>
+    </button>  
+
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
-    </button>
+    </button>  
   </div>
 
 
 
 
-
+<!--mensaje-->
 <section class="w-50 mx-auto text-center pt-5">
-  <h1 class="p-3 fs-2 border-top border-3"> tienda de arte</h1>
+  <h1 class="p-3 fs-2 border-top border-3"> xxxxxxxxxxxxxxxx</h1>
   <p class="p-3 fa-4"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat ratione nostrum assumenda molestiae, tempore officia perferendis sit ab porro cupiditate necessitatibus debitis officiis! Provident exercitationem, eaque hic porro consequuntur ex.</p>
 
 </section>
@@ -116,7 +119,7 @@
 
 
 
-
+<!--contenenedor selccion iamgenes-->
   <section class="container-fluid" id="contenedorimagenesestaticas1">
     <div class="row w-75 mx-auto">
       <div class="col-lg-3 col-md-6 col-sm-12">
@@ -152,6 +155,13 @@
       </div>
     </div>
   </section>
+
+
+
+ 
+
+  
+
 
 
   
