--- a/CosasPollo/index.html
+++ b/CosasPollo/index.html
@@ -62,7 +62,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Nosotros.html">Iniciar sesion</a>
+            <a class="nav-link" href="Inicio_sesion.html">Iniciar sesion</a>
           </li>   
         </ul>
         <form class="d-flex" role="search">
