--- a/CosasPollo/Inicio_sesion.html
+++ b/CosasPollo/Inicio_sesion.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Art Galery</title>
-
-    <!--linkcsshtmlbotstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <!--scriptjavabotstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <!--linkhojaestilo-->
-    <link rel="stylesheet" href="style.css">
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Formulario de Inicio de Sesión</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-
 <body>
-
-
-  <!--navbar-->
+     <!--navbar-->
   <header class="container-fluid bg-primary d-flex " >
     <p> GroundZero@protonmail.com </p>
   </header>
@@ -62,7 +49,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Nosotros.html">Iniciar sesion</a>
+            <a class="nav-link" href="Inicio_sesion.html">Iniciar sesion</a>
           </li>   
         </ul>
         <form class="d-flex" role="search">
@@ -72,21 +59,49 @@
       </div>
     </div>
   </nav>
-  <div class="container">
-    <div class="imagen-container">
-        <img src="artista1.jpg" alt="Autoretrato vicente van gogh">
-        <h2>Vicente Van Gogh</h2>
-        <p>influyente pintor postimpresionista, reconocido por su paleta vibrante y su profunda conexión con la naturaleza.</p>
-    </div>
-    <div class="imagen-container">
-        <img src="artista2.jpg" alt="Miguel Angel">
-        <h2>Miguel Angel</h2>
-        <p>Icono renacentista, maestro de la escultura y la pintura</p>
-    </div>
-    <div class="imagen-container">
-        <img src="artista3.jpg" alt="Frida Khalo">
-        <h2>Frida Khalo</h2>
-        <p>Pintora mexicana, ícono de autorretratos expresivos y emotivos</p>
+
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h2 class="text-center mb-4">Iniciar Sesión</h2>
+            <form id="inicioSesionForm">
+                <div class="form-group">
+                    <label for="correo">Correo electrónico</label>
+                    <input type="email" class="form-control" id="correo" name="correo" required>
+                </div>
+                <div class="form-group">
+                    <label for="contrasena">Contraseña</label>
+                    <input type="password" class="form-control" id="contrasena" name="contrasena" required>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Iniciar Sesión</button>
+            </form>
+            <p class="mt-3 text-center">¿No tienes cuenta? <a href="Crear_usuario.html">Crear una</a></p>
+        </div>
     </div>
 </div>
+
+<script>
+document.getElementById('inicioSesionForm').addEventListener('submit', function(event) {
+    var correo = document.getElementById('correo').value;
+    var contrasena = document.getElementById('contrasena').value;
+
+    if (!validarCorreo(correo)) {
+        alert('Por favor ingresa un correo electrónico válido.');
+        event.preventDefault();
+    } else if (!validarContrasena(contrasena)) {
+        alert('La contraseña debe contener al menos 6 caracteres y al menos una mayúscula.');
+        event.preventDefault();
+    }
+});
+
+function validarCorreo(correo) {
+    return correo.includes('@');
+}
+
+function validarContrasena(contrasena) {
+    return contrasena.length >= 6 && /[A-Z]/.test(contrasena);
+}
+</script>
+
 </body>
+</html>
