--- a/CosasPollo/index.html
+++ b/CosasPollo/index.html
@@ -49,8 +49,8 @@
                   Sesion**
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Iniciar Sesion</a></li>
-                  <li><a class="dropdown-item" href="#">Registrarse</a></li>
+                  <li><a class="dropdown-item" href="Sesion.html">Iniciar Sesion</a></li>
+                  <li><a class="dropdown-item" href="Crear_usuario.html">Registrarse</a></li>
                   
                 </ul>
               </li>
