--- a/CosasPollo/Artistas.html
+++ b/CosasPollo/Artistas.html
@@ -20,6 +20,102 @@
 <body>
 
 
-
+    <!--navbar-->
+    <header class="container-fluid bg-primary d-flex " >
+      <p> GroundZero@protonmail.com </p>
+    </header>
+  
+    <nav class="navbar navbar-expand-lg bg-body-tertiary p-3" id="menu1">
+      <div class="container-fluid">
+  
+        <a class="navbar-brand" href="#">
+          <span class="text-primary fs-5 fw-bold">GroundZero</span>
+        
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Artistas.html">Artistas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Nosotros.html">Sobre nosotros</a>
+            </li>
+  
+  
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Obras
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="Galeria.html">Escultura</a></li>
+                <li><a class="dropdown-item" href="Galeria.html">Tejidos</a></li>
+                <li><a class="dropdown-item" href="Galeria.html">Orfebrería</a></li>
+                <li><a class="dropdown-item" href="Galeria.html">Pinturas</a></li>
+                <li><a class="dropdown-item" href="Galeria.html">Otros</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Nosotros.html">Iniciar sesion</a>
+            </li>   
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="text" placeholder="Nosequesepuedebuscarxd" aria-label="Search">
+            <button class= "btn btn-primary btn-primary-outline-success" type="submit">Buscar</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  
+    <div class="d-flex justify-content-center">
+      <div class="card" style="width: 18rem; margin-right: 10px;">
+        <img class="card-img-top" src="imagenes/artista1.jpg" alt="Autoretrato vicente van gogh">
+        <div class="card-body">
+          <h5 class="card-title">Vicente Van Gogh</h5>
+          <p class="card-text">Influyente pintor postimpresionista, reconocido por su paleta vibrante y su profunda conexión con la naturaleza.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center"></div>
+      <div class="card" style="width: 18rem; margin-right: 10px;">
+        <img class="card-img-top" src="imagenes/artista2.jpg" alt="Miguel Angel">
+        <div class="card-body">
+          <h5 class="card-title">Miguel Angel</h5>
+          <p class="card-text">Icono renacentista, maestro de la escultura y la pintura</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center"></div>
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="imagenes/artista3.jpg" alt="Frida Khalo">
+        <div class="card-body">
+          <h5 class="card-title">Frida Khalo</h5>
+          <p class="card-text">Pintora mexicana, ícono de autorretratos expresivos y emotivos</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
-</html>
+<footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
+    <p class="fs-5 px-3  pt-3">GroundZero &copy; Todos Los Derechos Reservados 2024</p>
+    <div id="iconos" >
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-twitter"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>  
+    </div>
+  </footer>
+  
+      <!-- Option 1: Bootstrap Bundle with Popper -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script> 
+      <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+      <script src="main.js"></script>
+    </body>
+    
+  
