--- a/CosasPollo/index.html
+++ b/CosasPollo/index.html
@@ -46,7 +46,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Sesion**
+                  Sesion
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="Sesion.html">Iniciar Sesion</a></li>
@@ -180,7 +180,7 @@
 
 <section>
     <div class="container w-50 m-auto text-center" id="equipo">
-        <h1 class="mb-5 fs-2">Artistas de todo tipo de <span class="text-primary"> exelente calidad</span>.</h1>
+        <h1 class="mb-5 fs-2">Artistas de todo tipo de <span class="text-primary"> excelente calidad</span>.</h1>
         <p class="fs-4 ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, distinctio culpa ipsam dignissimos eos officiis quae vitae quos, pariatur</p>
     </div>
 
