--- a/CosasPollo/Galeria.html
+++ b/CosasPollo/Galeria.html
@@ -22,7 +22,7 @@
         <label for="artist">Artista:</label>
         <select id="artist">
           <option value="todos">Todos</option>
-          <option value="picasso">Miguel Angel</option>
+          <option value="miguelangel">Miguel Angel</option>
           <option value="vangogh">Van Gogh</option>
           <option value="vangogh">Frida Khalo</option>
           <!-- Agrega más opciones de artistas aquí -->
@@ -38,15 +38,57 @@
       </div>
       <div class="gallery">
         <!-- Obras de Arte -->
-        <div class="card" data-artist="picasso" data-type="pintura">
-          <img src="imagen1.jpg" alt="Obra 1">
-          <h3>Nombre Obra 1</h3>
-          <p>Descripción de la obra de arte.</p>
+        <div class="card" data-artist="miguelangel" data-type="escultura">
+          <img src="imgObras/Michelangelo,_madonna_della_scala,_1491_ca,_01.JPG" alt="escultura1">
+          <h3>madonna della scala</h3>
+          <p>Virgen y el Niño en una escena íntima y conmovedora.</p>
           <button class="add-to-cart">Agregar al carrito</button>
         </div>
         <div class="card" data-artist="vangogh" data-type="pintura">
-          <img src="imagen2.jpg" alt="Obra 2">
-          <h3>Nombre Obra 2</h3>
+          <img src="imgObras/wheatfields.jpg" alt="pintura1">
+          <h3>wheatfields</h3>
+          <p>Campos de trigo vibrantes y expresionistas con pinceladas enérgicas.</p>
+          <button class="add-to-cart">Agregar al carrito</button>
+        </div>
+        <div class="card" data-artist="vangogh" data-type="pintura">
+          <img src="imgObras/van-gogh-s-bedroom-in-arles-1889-1646929996.jpg" alt="pintura2">
+          <h3>Van gogh's bedroom in arles</h3>
+          <p>Interior sereno con muebles simples y colores vibrantes.</p>
+          <button class="add-to-cart">Agregar al carrito</button>
+        </div>
+        <div class="card" data-artist="vangogh" data-type="pintura">
+          <img src="imgObras/images.jpg" alt="pintura3">
+          <h3>Starry Night</h3>
+          <p>Remolinos estrellados en un cielo azul profundo y turbulento.</p>
+          <button class="add-to-cart">Agregar al carrito</button>
+        </div>
+        <div class="card" data-artist="miguelangel" data-type="escultura">
+          <img src="imgObras/descarga.jpg" alt="escultura2">
+          <h3>Michelangelo's David</h3>
+          <p>Estatua imponente de David en mármol, majestuosa y poderosa.</p>
+          <button class="add-to-cart">Agregar al carrito</button>
+        </div>
+        <div class="card" data-artist="miguelangel" data-type="escultura">
+          <img src="imgObras/la-piedad-del-vaticano_1328x2000_42e79e9e.jpg" alt="escultura3">
+          <h3>Michelangelo's Pietà</h3>
+          <p>Escultura conmovedora de María sosteniendo a Jesús después de la crucifixión.</p>
+          <button class="add-to-cart">Agregar al carrito</button>
+        </div>
+        <div class="card" data-artist="vangogh" data-type="escultura">
+          <img src="imagen3.jpg" alt="Obra 3">
+          <h3>Nombre Obra 3</h3>
+          <p>Descripción de la obra de arte.</p>
+          <button class="add-to-cart">Agregar al carrito</button>
+        </div>
+        <div class="card" data-artist="vangogh" data-type="escultura">
+          <img src="imagen3.jpg" alt="Obra 3">
+          <h3>Nombre Obra 3</h3>
+          <p>Descripción de la obra de arte.</p>
+          <button class="add-to-cart">Agregar al carrito</button>
+        </div>
+        <div class="card" data-artist="vangogh" data-type="escultura">
+          <img src="imagen3.jpg" alt="Obra 3">
+          <h3>Nombre Obra 3</h3>
           <p>Descripción de la obra de arte.</p>
           <button class="add-to-cart">Agregar al carrito</button>
         </div>
