--- a/CosasPollo/Galeria.html
+++ b/CosasPollo/Galeria.html
@@ -12,6 +12,8 @@
     <!--scriptjavabotstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+
     <!--linkhojaestilo-->
     <link rel="stylesheet" href="styles/Style_galeria.css">
 
@@ -37,13 +39,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#equipo">Artistas</a>
+                <a class="nav-link" href="Artistas.html">Artistas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#seccion-contacto">Nosotros</a>
+                <a class="nav-link" href="Nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -60,11 +62,11 @@
                   Obras
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Pinturas</a></li>
-                  <li><a class="dropdown-item" href="#">Orfebrería</a></li>
-                  <li><a class="dropdown-item" href="#">Pinturas</a></li>
-                  <li><a class="dropdown-item" href="#">Tejidos</a></li>
-                  <li><a class="dropdown-item" href="#">Otros</a></li>
+                  <li><a class="dropdown-item" href="Galeria.html">Pinturas</a></li>
+                  <li><a class="dropdown-item" href="Galeria.html">Orfebrería</a></li>
+                  <li><a class="dropdown-item" href="Galeria.html">Pinturas</a></li>
+                  <li><a class="dropdown-item" href="Galeria.html">Tejidos</a></li>
+                  <li><a class="dropdown-item" href="Galeria.html">Otros</a></li>
                 </ul>
               </li>
             </ul>
@@ -79,6 +81,12 @@
 
         </div>
       </nav>
+
+
+
+
+      <!------------------------------------------------------------>
+      <!------------------------------------------------------------>
     <div class="filters">
         <!-- Filtros -->
         <label for="artist">Artista:</label>
@@ -202,12 +210,13 @@
         });
     </script>
 </body>
-<footer class="w-100 d-flex align-items-center justify-content-center flex-wrap">
-  <p class="fs-5 px-3 pt-3">GroundZero &copy; Todos Los Derechos Reservados 2024</p>
-  <div id="iconos">
+<footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
+  <p class="fs-5 px-3  pt-3">GroundZero &copy; Todos Los Derechos Reservados 2024</p>
+  <div id="iconos" >
       <a href="#"><i class="bi bi-facebook"></i></a>
       <a href="#"><i class="bi bi-twitter"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>
+      <a href="#"><i class="bi bi-instagram"></i></a>  
   </div>
 </footer>
+
 </html>
