--- a/CosasPollo/index.html
+++ b/CosasPollo/index.html
@@ -129,7 +129,7 @@
     <section class="d-flex flex-column justify-content-center align-items-center pt-5  text-center w-50 m-auto" id="intro">
     <h1 class="p-3 fs-2 border-top border-3">Una tienda de arte unica para encontrar obras de arte de todo tipo</h1>
      <p class="p-3  fs-4">
-         <span class="text-primary">GroundZero</span> es tu lugar para Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non eaque, tempora aliquid sunt molestiae saepe? Aspernatur saepe tempora, cum fugit laborum similique nisi, molestiae totam labore quae ipsam maiores voluptates!      
+         <span class="text-primary">GroundZero</span> es tu lugar para encontrar las obras más populares del grupos de artistas más celebres del último tiempo.      
      </p>   
     </section>
 
@@ -189,7 +189,7 @@
 <section>
     <div class="container w-50 m-auto text-center" id="equipo">
         <h1 class="mb-5 fs-2">Artistas de todo tipo de <span class="text-primary"> excelente calidad</span>.</h1>
-        <p class="fs-4 ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, distinctio culpa ipsam dignissimos eos officiis quae vitae quos, pariatur</p>
+        <p class="fs-4 ">Acá encontrarás todos los medios artísticos que quieras, con un catálogo que crece todos los dias </p>
     </div>
 
     <div class="mt-5 text-center">
@@ -204,7 +204,7 @@
             <div class="wrapper-local">
                 <h2>Ubicados en Santigo </h2>
                 <h2 class="text-primary mb-4" id="typewriter"></h2>
-                <p class="fs-5 text-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aperiam nihil dolorum velit cupiditate enim cumque architecto perspiciatis aspernatur. Fugiat alias ullam culpa dolore sit expedita officia ducimus recusandae dolores?</p>
+                <p class="fs-5 text-body">!Ven a visitarnos¡ Nos encontramos en un lugar privilegiado a pocos pasos de varias estaciones de metro</p>
                 <section class="d-flex justify-content-start" id="numeros-local">
               </section>
             </div>
@@ -234,7 +234,7 @@
       <div class="text-center mb-4" id="titulo-formulario">
         <div><img src="./img/support.png" alt="" class="img-fluid ps-5"></div>
         <h2>Contactanos</h2>
-        <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ducimus assumenda non aliquam quibusdam ratione unde dolores totam repudiandae! Veniam quisquam veritatis facere autem maxime delectus aliquam voluptates quos distinctio.</p>
+        <p class="fs-5">¿Te gustaría comprar algo que no tenemos en nuestro catálogo?¿Tienes algún reclamo y/o consulta? Envianos un mensaje y en unos pocos dias te responderemos</p>
       </div>
 
      
