--- a/CosasPollo/Nosotros.html
+++ b/CosasPollo/Nosotros.html
@@ -18,8 +18,21 @@
 </head>
 
 <body>
+    <header> </header>
 
 
- 
+
+   <div class="bg-primary"  > falta aqui a</div>
+
+
+
+    <footer></footer>
+
+
+
+
+
+
+<script src="scripts.js/scripts.js"></script>     
 </body>
 </html>
