--- a/CosasPollo/Galeria.html
+++ b/CosasPollo/Galeria.html
@@ -25,6 +25,7 @@
 
 
 
+
       <!------------------------------------------------------------>
       <!------------------------------------------------------------>
     <div class="filters">
@@ -117,24 +118,12 @@
           <button class="add-to-cart">Agregar al carrito</button>
         </div>
       </div>
-
-
-      <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
-        <p class="fs-5 px-3  pt-3">GroundZero &copy; Todos Los Derechos Reservados 2024</p>
-        <div id="iconos" >
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-twitter"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>  
-        </div>
-      </footer>
-
       <!--js para filtros-->
       <script>
         document.addEventListener("DOMContentLoaded", function() {
             var artistSelect = document.getElementById("artist");
             var typeSelect = document.getElementById("type");
-            var car
-            ds = document.querySelectorAll(".card");
+            var cards = document.querySelectorAll(".card");
 
             artistSelect.addEventListener("change", function() {
                 filterCards();
@@ -161,8 +150,10 @@
             }
         });
     </script>
-    <script src="scripts.js/scripts.js"></script>    
+    <script src="scripts.js/scripts.js"></script>
+    
 </body>
+<footer ></footer>
 
 
 </html>
