--- a/CosasPollo/Galeria.html
+++ b/CosasPollo/Galeria.html
@@ -18,7 +18,9 @@
 
 </head>
 <body>
-  <header></header>
+  <header>
+    
+  </header>
 
 
       <!------------------------------------------------------------>
