--- a/CosasPollo/Galeria.html
+++ b/CosasPollo/Galeria.html
@@ -114,16 +114,11 @@
         </div>
       </div>
       <!--js para filtros-->
+      <footer></footer>
       <script src="scripts.js/galeria.js"></script>
       <script src="scripts.js/scripts.js"></script>
 </body>
-<footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
-  <p class="fs-5 px-3  pt-3">GroundZero &copy; Todos Los Derechos Reservados 2024</p>
-  <div id="iconos" >
-      <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-twitter"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>  
-  </div>
-</footer>
+
+
 
 </html>
