--- a/CosasPollo/Nosotros.html
+++ b/CosasPollo/Nosotros.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art Galery</title>
@@ -13,18 +14,30 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <!--linkhojaestilo-->
-    <link rel="stylesheet" href="styles/Style_sesion.css">
+    <link rel="stylesheet" href="styles/style_nosotros.css">
 
+    <!-- Agregar la referencia a Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
     <header> </header>
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Título de la Tarjeta</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt praesent semper feugiat nibh sed. Cursus risus at ultrices mi tempus imperdiet nulla malesuada pellentesque. Viverra mauris in aliquam sem fringilla ut morbi tincidunt augue. Eu tincidunt tortor aliquam nulla. Faucibus a pellentesque sit amet. Pulvinar neque laoreet suspendisse interdum. Lectus mauris ultrices eros in. Gravida in fermentum et sollicitudin ac orci phasellus egestas tellus. Justo nec ultrices dui sapien. Quis auctor elit sed vulputate mi sit amet mauris. Ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a. Id donec ultrices tincidunt arcu non sodales. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Quam pellentesque nec nam aliquam sem et. Rhoncus aenean vel elit scelerisque mauris pellentesque. Amet facilisis magna etiam tempor orci eu lobortis elementum.
+</p>
+            </div>
+        </div>
+    </div>
 
 
 
-   <div class="bg-primary"  > falta aqui a</div>
-
-
+   <br></br>
+   <br></br>
+   <br></br>
+   <br></br>
 
     <footer></footer>
 
@@ -33,6 +46,8 @@
 
 
 
-<script src="scripts.js/scripts.js"></script>     
+<script src="scripts.js/scripts.js"></script>  
+<script src="scripts.js/nosotros.js"></script>
+   
 </body>
 </html>
