--- a/CosasPollo/Sesion.html
+++ b/CosasPollo/Sesion.html
@@ -22,7 +22,7 @@
     
   </header>
 
-<div class="container mt-5">
+<div class="container ">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <h2 class="text-center mb-4">Iniciar Sesión</h2>
