--- a/CosasPollo/Nosotros.html
+++ b/CosasPollo/Nosotros.html
@@ -29,7 +29,7 @@
                 <div class="col-md-12 mb-4 mt-5">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title text-center">Sobre nosotros</h5>
+                            <h5 class="card-title text-center">¿Quienes somos?</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt praesent semper feugiat nibh sed. Cursus risus at ultrices mi tempus imperdiet nulla malesuada pellentesque. Viverra mauris in aliquam sem fringilla ut morbi tincidunt augue. Eu tincidunt tortor aliquam nulla. Faucibus a pellentesque sit amet. Pulvinar neque laoreet suspendisse interdum.</p>
                         </div>
                     </div>
@@ -37,7 +37,7 @@
                 <div class="col-md-12 ">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title text-center">Nuestra misión</h5>
+                            <h5 class="card-title text-center">¿Que ofrecemos?</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tincidunt praesent semper feugiat nibh sed. Cursus risus at ultrices mi tempus imperdiet nulla malesuada pellentesque. Viverra mauris in aliquam sem fringilla ut morbi tincidunt augue. Eu tincidunt tortor aliquam nulla. Faucibus a pellentesque sit amet. Pulvinar neque laoreet suspendisse interdum.</p>
                         </div>
                     </div>
