--- a/CosasPollo/index.html
+++ b/CosasPollo/index.html
@@ -40,8 +40,8 @@
   
     <!-- Testimonios -->
     <section id="testimonios" class="testimonios seccion-clara">
-      <h2 class="seccion-titulo">Obras Destacadas</h2>
-      <h3 class="seccion-descripcion">Obras destacadas de la semana</h3>
+      <h2 class="seccion-titulo">Obras Destacadas de la semana</h2>
+      
       
       <!-- Carrusel -->
       <div id="testimonios-carrusel" class="carousel carousel-dark slide" data-bs-ride="carousel">
