--- a/CosasPollo/Galeria.html
+++ b/CosasPollo/Galeria.html
@@ -49,70 +49,70 @@
           <h3>madonna della scala</h3>
           <p>Virgen y el Niño en una escena íntima y conmovedora.</p>
           <p>$98.990</p>
-          <button class="add-to-cart">Agregar al carrito</button>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
         </div>
         <div class="card" data-artist="vangogh" data-type="pintura">
           <img src="imgObras/wheatfields.jpg" alt="pintura1">
           <h3>wheatfields</h3>
           <p>Campos de trigo vibrantes y expresionistas con pinceladas enérgicas.</p>
           <p>$64.990</p>
-          <button class="add-to-cart">Agregar al carrito</button>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
         </div>
         <div class="card" data-artist="vangogh" data-type="pintura">
           <img src="imgObras/van-gogh-s-bedroom-in-arles-1889-1646929996.jpg" alt="pintura2">
           <h3>Van gogh's bedroom in arles</h3>
           <p>Interior sereno con muebles simples y colores vibrantes.</p>
           <p>$86.000</p>
-          <button class="add-to-cart">Agregar al carrito</button>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
         </div>
         <div class="card" data-artist="vangogh" data-type="pintura">
           <img src="imgObras/images.jpg" alt="pintura3">
           <h3>Starry Night</h3>
           <p>Remolinos estrellados en un cielo azul profundo y turbulento.</p>
           <p>$198.990</p>
-          <button class="add-to-cart">Agregar al carrito</button>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
         </div>
         <div class="card" data-artist="miguelangel" data-type="escultura">
           <img src="imgObras/descarga.jpg" alt="escultura2">
           <h3>Michelangelo's David</h3>
           <p>Estatua imponente de David en mármol, majestuosa y poderosa.</p>
           <p>$988.990</p>
-          <button class="add-to-cart">Agregar al carrito</button>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
         </div>
         <div class="card" data-artist="miguelangel" data-type="escultura">
           <img src="imgObras/la-piedad-del-vaticano_1328x2000_42e79e9e.jpg" alt="escultura3">
           <h3>Michelangelo's Pietà</h3>
           <p>Escultura conmovedora de María sosteniendo a Jesús después de la crucifixión.</p>
           <p>$560.990</p>
-          <button class="add-to-cart">Agregar al carrito</button>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
         </div>
         <div class="card" data-artist="miguelangel" data-type="escultura">
           <img src="imgObras/Madonna_michelangelo1.jpg" alt="escultura4">
           <h3>Madonna and Child</h3>
           <p>Madonna con el Niño: ternura divina capturada en arte</p>
           <p>$630.990</p>
-          <button class="add-to-cart">Agregar al carrito</button>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
         </div>
         <div class="card" data-artist="frida" data-type="pintura">
           <img src="imgObras/KAHLOESPANO2305-superJumbo-v13.png" alt="pintura4">
           <h3>Self Portrait with Necklace of Thorns</h3>
           <p>Autorretrato impactante que exhibe dolor y fortaleza con espinas.</p>
           <p>$76.000</p>
-          <button class="add-to-cart">Agregar al carrito</button>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
         </div>
         <div class="card" data-artist="frida" data-type="pintura">
           <img src="imgObras/descarga (1).jpg" alt="pintura5">
           <h3>Diego y yo</h3>
           <p>Obra íntima que muestra el amor y la conexión emocional.</p>
           <p>$89.990</p>
-          <button class="add-to-cart">Agregar al carrito</button>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
         </div>
         <div class="card" data-artist="frida" data-type="pintura">
           <img src="imgObras/unnamed.jpg" alt="pintura6">
           <h3>Viva la Vida</h3>
           <p>Obra íntima que muestra el amor y la conexión emocional.</p>
           <p>$78.990</p>
-          <button class="add-to-cart">Agregar al carrito</button>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
         </div>
       </div>
       <!--js para filtros-->
