--- a/CosasPollo/Artistas.html
+++ b/CosasPollo/Artistas.html
@@ -9,7 +9,7 @@
     <!--linkcsshtmlbotstrap-->
 
 
-    <!--por queeee hay tanto link?-->
+    <!--p-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     
@@ -35,6 +35,8 @@
   <!--========================================================== -->
                         <!--Secccion artistas-->
 <!--========================================================== -->
+
+<section>
     <h1 class="text-center my-5">Nuestros Artistas</h1>
     <div class="container">
         <div class="image-container">
@@ -59,6 +61,7 @@
           </div>
         </div>
       </div>
+    </section>      
 
 
 
